# rusty-celery-tester

./: .env  .envrc  .gitignore  Cargo.toml  README.md  celery-tester.py  docker-compose.yml  flake.nix  justfile  requirements.txt
celery_test_py/: tasks.py
examples/: lapin-test.rs
py/: tasks.py
rust/: Cargo.toml
rust/src/: tasks.rs
src/: main.rs  task.rs  task_failure.rs  tasks.rs
tests/: rust-client-and-worker-test.py
